# alternative_AMMs

./: .gitignore  README.md  pyproject.toml
notebooks/: FMAMM_simulation.ipynb  batch_computation.ipynb
notes/: FMAMM_CPMM_LVR_comparison.ipynb  FMAMM_batch.ipynb  FMAMM_batch_math.ipynb  FMAMM_simulation.ipynb  LVR_comparison.ipynb  LVR_comparison_with_fee.ipynb  LVR_comparison_without_fee.ipynb
script/: FMAMM.s.sol
src/: FMAMMPair.sol  IFMAMM_pair.sol  IFMAMM_vault.sol
test/: FMAMM.t.sol
vyper_contracts/: DPAMM_pair.vy  FMAMM_pair.vy  FMAMM_vault.vy
