[tool.poetry]
name = "fmamm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
sympy = "^1.12"
ipykernel = "^6.29.1"
black = "^24.1.1"
pandas = "^2.2.0"
scipy = "^1.12.0"
prettytable = "^3.9.0"
vyper = "^0.3.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
